<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shadikhana SMS</string>
    <string name="gateway_notification_title">Urdu Shadikhana SMS Gateway</string>
    <string name="gateway_notification_text">Polling Salesforce for pending SMS</string>
    <string name="start_gateway">Start gateway</string>
    <string name="stop_gateway">Stop gateway</string>
    <string name="save_settings">Save settings</string>
    <string name="test_connection">Test connection</string>
    <string name="send_test_sms">Send test SMS</string>
    <string name="poll_now">Poll now</string>
    <string name="permission_sms_required">SMS permission is required to send messages from this device.</string>
    <string name="settings_saved">Settings saved</string>
    <string name="gateway_running">Gateway running</string>
    <string name="gateway_stopped">Gateway stopped</string>
</resources>
